--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,189 +1,1 @@
-@charset "utf-8";
-@font-face{
-    font-family: 'FontLogo';
-    src: url("../_fonts/bubblegum-sans-regular.otf");
-}
-
-body{
-    background-color: #dddddd;
-    color: rgba(0, 0, 0, 1);
-}
-
-div#interface{
-    width: 900px;
-    background-color: #ffffff;
-    margin: -20px auto 0px auto; /*mexendo na centralização da div*/
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);/*sombreamento das bordas*/
-    padding: 10px;
-}
-
-p { /* serve para formatar todos os <p>*/
-    text-align: justify;  /*serve para alinhar o texto de forma justificada*/
-    text-indent: 50px;  /*serve para identar 50 pixels*/ 
-} 
-/*formatação do header*/
-header#cabecalho img#icone{
-    position: absolute;
-    left: 960px;
-    top: 70px;
-}
-
-header#cabecalho{
-    border-bottom: 1px #606060 solid;
-    height: 150px;
-    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px; /*para colocarmos a logo do site*/
-}
-
-header#cabecalho h1{
-    font-family: 'FontLogo', sans-serif;
-    font-size: 30pt;
-    color: #606060;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
-    padding: 0px;
-    margin-bottom: 0px;
-}
-
-header#cabecalho h2{
-    font-family: Arial, sans-serif;
-    color: #888888;
-    font-size: 15pt;
-    padding: 0px;
-    margin-top: 0px;
-}
-
-/*formatação de imagens com legendas*/
-figure.foto-legenda{
-    position: relative;
-    border: 8px solid white; /*aqui adicionamos uma borda sólida e vermelha*/
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4); /*aqui criamos um efeito para deixar um sombreamento*/
-}
-
-figure.foto-legenda img{
-    width: 100%;
-    height: 100%;
-}
-
-figure.foto-legenda figcaption{
-    opacity: 0;
-    position: absolute; /*aqui mexemos na posição*/
-    top: 0px;
-    background-color: rgba(0, 0, 0, 0.4); /*serve para deixarmos a cor mais leve*/
-    color: white; /*cor do texto*/
-    width: 100%; /*aqui definimos a largura*/
-    height: 100%; /*aqui a altuta*/
-    padding: 10px; /*aqui definimos a distancia*/
-    box-sizing: border-box; /*serve para criarmos uma box dentro da borda*/
-    transition: opacity 1s; /*serve para mexer no tempo de transição*/
-}
-
-/*aqui vamos fazer a legenda aparecer só quando passarmos o mouse por cima*/
-figure.foto-legenda:hover figcaption{
-    opacity: 1;
-}
-
-/*formatação do menu*/
-nav#menu{
-    display: block;
-}
-
-nav#menu ul{
-    list-style: none; /*para tirar os marcadores da lista*/
-    text-transform: uppercase; /*para deixar tudo maiusculo*/
-    position: absolute;
-    top: -20px;
-    left: 500px;
-}
-
-nav#menu li{
-    display: inline-block; /*para a lista ficar uma do lado da outra*/
-    background-color: #dddddd;
-    padding: 10px;
-    margin: 2px;
-    transition: background-color 1s; /*efeito de transição*/
-}
-
-nav#menu li:hover{ /*efeito do botão*/
-    background-color: #606060;
-}
-
-nav#menu h1{
-    display: none;
-}
-
-nav#menu a{ /*editando todos os links do menu*/
-    color: black;
-    text-decoration: none;
-
-}
-
-nav#menu a:hover{
-    color: white;
-}
-
-/*configurando a section*/
-section#corpo{
-    display: block;
-    width: 520px;
-    float: left;
-    border-right: 1px solid #606060;
-    padding-right: 15px;
-}
-
-/*formatação da tabela*/
-table#tabelaspec{
-    border: 1px solid #606060;
-    border-spacing: 0px;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-table#tabelaspec td{
-    border: 1px solid #606060;
-    padding: 10px;
-    text-align: center;
-    vertical-align: middle;
-}
-
-table#tabelaspec td.ce{
-    color: white;
-    background-color: #606060;
-    vertical-align: top;
-    font-weight: bold;
-}
-
-table#tabelaspec td.cd{
-    background-color: #cecece;
-}
-
-table#tabelaspec caption{
-    color: #888888;
-    font-size: 13pt;
-    font-weight: bolder;
-}
-
-table#tabelaspec caption span{
-    display: block;
-    float: right;
-    color: black;
-    font-size: 8pt;
-    margin-top: 10px;
-}
-
-/*configurando o aside*/
-aside#lateral{
-    display: block;
-    width: 350px;
-    float: right;
-}
-
-/*configurando o footer*/
-footer#rodape{
-    clear: both;
-    border-top: 1px solid #606060;
-}
-
-footer#rodape p{
-    text-align: center;
-}
-
+@font-face{font-family:"FontLogo";src:url("../_fonts/bubblegum-sans-regular.otf")}body{background-color:#ddd;color:#000}div#interface{width:900px;background-color:#fff;margin:-20px auto 0px auto;box-shadow:0px 0px 10px rgba(0,0,0,.5);padding:10px}p{text-align:justify;text-indent:50px}header#cabecalho img#icone{position:absolute;left:960px;top:70px}header#cabecalho{border-bottom:1px #606060 solid;height:150px;background:url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px}header#cabecalho h1{font-family:"FontLogo",sans-serif;font-size:30pt;color:#606060;text-shadow:1px 1px 1px rgba(0,0,0,.6);padding:0px;margin-bottom:0px}header#cabecalho h2{font-family:Arial,sans-serif;color:#888;font-size:15pt;padding:0px;margin-top:0px}figure.foto-legenda{position:relative;border:8px solid #fff;box-shadow:1px 1px 4px rgba(0,0,0,.4)}figure.foto-legenda img{width:100%;height:100%}figure.foto-legenda figcaption{opacity:0;position:absolute;top:0px;background-color:rgba(0,0,0,.4);color:#fff;width:100%;height:100%;padding:10px;box-sizing:border-box;transition:opacity 1s}figure.foto-legenda:hover figcaption{opacity:1}nav#menu{display:block}nav#menu ul{list-style:none;text-transform:uppercase;position:absolute;top:-20px;left:500px}nav#menu li{display:inline-block;background-color:#ddd;padding:10px;margin:2px;transition:background-color 1s}nav#menu li:hover{background-color:#606060}nav#menu h1{display:none}nav#menu a{color:#000;text-decoration:none}nav#menu a:hover{color:#fff}section#corpo{display:block;width:520px;float:left;border-right:1px solid #606060;padding-right:15px}table#tabelaspec{border:1px solid #606060;border-spacing:0px;margin-left:auto;margin-right:auto}table#tabelaspec td{border:1px solid #606060;padding:10px;text-align:center;vertical-align:middle}table#tabelaspec td.ce{color:#fff;background-color:#606060;vertical-align:top;font-weight:bold}table#tabelaspec td.cd{background-color:#cecece}table#tabelaspec caption{color:#888;font-size:13pt;font-weight:bolder}table#tabelaspec caption span{display:block;float:right;color:#000;font-size:8pt;margin-top:10px}aside#lateral{display:block;width:350px;float:right}footer#rodape{clear:both;border-top:1px solid #606060}footer#rodape p{text-align:center}@media(max-width: 1200px){#interface{width:100%;padding:10px 40px}#interface #cabecalho{background-position:bottom;height:150px;margin-bottom:250px;position:relative}#interface #cabecalho #menu{display:none}#interface #cabecalho #icone{left:40%;top:210px}#interface #cabecalho hgroup h1,#interface #cabecalho hgroup h2{text-align:center}#interface #cabecalho hgroup h1{margin-bottom:15px}#interface main{display:flex;flex-direction:column;padding:0 30px}#interface main #corpo{width:100%;border:none}#interface main #lateral{width:100%}}
