--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -213,7 +213,7 @@ footer#rodape p {
 
 /*criando a responsividade*/
 @media (max-width: 1200px) {
-    #interface {
+    div#interface {
         width: 100%;
         padding: 10px 40px;
 
