--- a/css/estilo.scss
+++ b/css/estilo.scss
@@ -8,6 +8,7 @@
 body {
     background-color: #dddddd;
     color: rgba(0, 0, 0, 1);
+    font-family: Arial, sans-serif;
 }
 
 div#interface {
@@ -27,6 +28,17 @@ p {
     text-indent: 50px;
     /*serve para identar 50 pixels*/
 }
+
+/*formatando todos os links*/
+a{
+    color: #606060;
+    text-decoration: none;
+        &:hover{
+        text-decoration: underline;
+    }
+}
+
+
 
 /*formatação do header*/
 header#cabecalho img#icone {
@@ -153,6 +165,39 @@ section#corpo {
     padding-right: 15px;
 }
 
+/*formatando o article*/
+article#noticia-principal{
+    h2{
+        font-size: 12pt;
+        color: #606060;
+        background-color: #dddddd;
+        padding: 5px 0px 5px 10px;
+        margin: 10px 0px;
+    }
+}
+
+/*formatando o cabecalho-aarigo*/
+header#cabecalho-artigo{
+    h1{
+        font-family: 'FontLogo', sans-serif;
+        font-size: 20pt;
+        color: #606060;
+        margin-bottom: 0px;
+        margin-top: 0px;
+    } 
+    h2{
+        font-size: 13pt;
+        color: #cecece;
+        background-color: #ffffff;
+        margin: 0px;
+    }
+    h3{
+        font-size: 12px;
+        color: #606060;
+
+    }
+}
+
 /*formatação da tabela*/
 table#tabelaspec {
     border: 1px solid #606060;
@@ -199,6 +244,22 @@ aside#lateral {
     display: block;
     width: 350px;
     float: right;
+    background-color: #dddddd;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    h1{
+        font-family: 'FontLogo', sans-serif;
+        font-size: 20pt;
+        color: #606060;
+        margin-top: 0px;
+    }
+    h2{
+        background-color: #606060;
+        font-size: 13pt;
+        color: #ffffff;
+        padding: 5px;
+    }
 }
 
 /*configurando o footer*/
